examples/test_package/Double_dc_only_report_tool/steps/benchzebra_precise_run5/#test_analysis_1_result.txt
### Code Evaluation Report: Zebra Puzzle in ProbLog

---

#### **1. Document Title**
**Evaluation of Zebra Puzzle Implementation in ProbLog**

---

#### **2. Background and Purpose**
The provided code is an implementation of the classic "Zebra Puzzle" in ProbLog, a probabilistic logic programming language. The puzzle involves deducing the correct arrangement of houses based on a set of given clues. The purpose of this evaluation is to:
- Verify the correctness of the implementation.
- Analyze the test results and identify any failures.
- Ensure compliance with ProbLog's probabilistic and classical reasoning rules.

---

#### **3. Test Results Summary**
The test results indicate a failure due to the absence of a `member/2` predicate in the ProbLog environment. The error message is:
```
Error evaluating Problog model:
    return exec_func(node_id=node_id, node=node, **kwdargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/engine_stack.py", line 839, in eval_call
    raise UnknownClause(origin, location=loc)
problog.engine.UnknownClause: No clauses found for 'member/2' at 4:1.
```

**Failed Queries:**
- The query `zebra(Houses)` fails because the `member/2` predicate is not defined in the ProbLog environment.

---

#### **4. Failure Localization**
- **Failed Predicate:** `member/2`
- **Code Location:** Line 4 of the provided code.
- **Issue:** The `member/2` predicate is used in the code but is not defined in the ProbLog environment. The error occurs because ProbLog does not recognize this predicate.

---

#### **5. Root Cause Analysis**
- **Classical ProbLog Scenario:**
  - The `member/2` predicate is a standard Prolog predicate used to check membership in a list. However, ProbLog does not include this predicate by default.
  - The code defines a custom `my_member/2` predicate, but it is not used in place of `member/2`.

- **Probabilistic ProbLog Scenario:**
  - The code does not involve probabilistic facts or rules, so no probabilistic reasoning issues are present.
  - DeepProbLog features (e.g., `nn/3`, `tensor/…`) are not used in this implementation.

---

#### **6. Overall Analysis**
- **Functional Requirements:**
  - **Classical Reasoning:** Partially met. The logic of the puzzle is correctly encoded, but the missing `member/2` predicate prevents execution.
  - **Probabilistic Reasoning:** Not applicable in this context.
  - **Neural Network Integration:** Not used.

- **Edge Cases:**
  - The code assumes the `member/2` predicate is available, which is not the case in ProbLog.
  - The custom `my_member/2` predicate is defined but not utilized.

---

#### **7. Error Summary**

| Number | Problem                          | Impact                          | Suggestion                          |
|--------|----------------------------------|---------------------------------|-------------------------------------|
| 1      | Missing `member/2` predicate     | Query execution fails           | Replace `member/2` with `my_member/2` or define `member/2` in ProbLog. |

---

### **Final Recommendations**
1. **Replace `member/2` with `my_member/2`:**
   - Update the code to use the custom `my_member/2` predicate instead of `member/2`.
   - Example:
     ```prolog
     zebra(Houses) :-
         houses(Houses),
         my_member(house(red, english, _, _, _), Houses),
         ...
     ```

2. **Define `member/2` in ProbLog:**
   - If `member/2` is required, define it explicitly in the ProbLog environment:
     ```prolog
     member(X, [X|_]).
     member(X, [_|Y]) :- member(X, Y).
     ```

3. **Verify All Predicates:**
   - Ensure all predicates used in the code are either built-in or explicitly defined in the ProbLog environment.

By addressing these issues, the code should execute correctly and solve the Zebra Puzzle as intended.